force-app/main/default/objects/Mentor__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Mentors</relationshipLabel>
    <relationshipName>Mentors</relationshipName>
    <type>Lookup</type>
</CustomField>