force-app/main/default/objects/Mentor__c/fields/Total_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Reviews__c</fullName>
    <label>Total Reviews</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>